--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         </div>
         <div class="img"><i class="fa-solid fa-truck"></i></div>
       </section>
+
       <section class="order-action-container child5">
         <div class="order-action">
           <p>Add new Product</p>
@@ -141,27 +142,27 @@
         </div>
 
         <div class="products">
-          <!-- <ul>
-            <li>Product name<span>Remaining 10%</span></li>
-            <li>Product name<span>Remaining 25%</span></li>
-            <li>Product name<span>Remaining 33%</span></li>
-            <li>Product name<span>Remaining 35%</span></li>
-          </ul> -->
+          <h5>Low stock Products</h5>
+
           <div>
-            <p>Product name</p>
-            <p>Remaining 10%</p>
+            <p class="black-text">Product name</p>
+            <p class="red-text">Remaining 10%</p>
           </div>
           <div>
-            <p>Product name</p>
-            <p>Remaining 25%</p>
+            <p class="black-text">Product name</p>
+            <p class="red-text">Remaining 25%</p>
           </div>
           <div>
-            <p>Product name</p>
-            <p>Remaining 33%</p>
+            <p class="black-text">Product name</p>
+            <p class="red-text">Remaining 33%</p>
           </div>
           <div>
-            <p>Product name</p>
-            <p>Remaining 35%</p>
+            <p class="black-text">Product name</p>
+            <p class="red-text">Remaining 35%</p>
+          </div>
+
+          <div class="scroll">
+            <div></div>
           </div>
         </div>
       </section>
